objects/Action_Item_Dependency_and_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Sprint__c</fullName>
        <formula>User_Story__r.Sprint__r.Name</formula>
        <label>Assigned Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <label>Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>Epics__c</referenceTo>
        <relationshipName>Action_Items_Dependencies_and_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Impediments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Harris - Emily Etzborn</fullName>
                </value>
                <value>
                    <fullName>Harris - Jacquelyn McGann</fullName>
                </value>
                <value>
                    <fullName>Harris - Jeff Kurth</fullName>
                </value>
                <value>
                    <fullName>Harris - Lisa Cline</fullName>
                </value>
                <value>
                    <fullName>Harris - Paul Nagle</fullName>
                </value>
                <value>
                    <fullName>Harris - Simon Lockington</fullName>
                </value>
                <value>
                    <fullName>Volo - Bryan Lauh</fullName>
                </value>
                <value>
                    <fullName>Volo - Eric Cordell</fullName>
                </value>
                <value>
                    <fullName>Volo - Raj Vooturi</fullName>
                </value>
                <value>
                    <fullName>Volo - Suraj Aluru</fullName>
                </value>
                <value>
                    <fullName>Harris - Jaime Cangas</fullName>
                </value>
                <value>
                    <fullName>Harris - Dawn Vance</fullName>
                </value>
                <value>
                    <fullName>Harris - Vicky Canton</fullName>
                </value>
                <value>
                    <fullName>Harris - Mark Cowles</fullName>
                </value>
                <value>
                    <fullName>Harris - David Poling</fullName>
                </value>
                <value>
                    <fullName>Harris - Mark Jordan</fullName>
                </value>
                <value>
                    <fullName>Harris - Kathy Bienz</fullName>
                </value>
                <value>
                    <fullName>Harris - Oliver Abadeer</fullName>
                </value>
                <value>
                    <fullName>Harris -Megan Varner</fullName>
                </value>
                <value>
                    <fullName>Harris - Lane Lobaugh</fullName>
                </value>
                <value>
                    <fullName>Harris - Glodina Connan</fullName>
                </value>
                <value>
                    <fullName>Harris - Ole Calderone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Impediments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Impediments</relationshipLabel>
        <relationshipName>Impediments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Addressed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Item</fullName>
                </value>
                <value>
                    <fullName>Dependency</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipName>Action_Items_Dependencies_and_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Impediment</label>
    <nameField>
        <label>Dependencies and Risks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impediments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>